Fix type of strategy config (ValidList -> ValidString)